# aws-tagging-orchestrator

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yaml
src/aws_tagging_orchestrator/config/: __init__.py  core.py  settings.py
tests/config/: test_settings.py
